Changed button titles

--- a/assets/javascripts/discourse/templates/canned-replies.hbs
+++ b/assets/javascripts/discourse/templates/canned-replies.hbs
@@ -19,7 +19,7 @@
     extensions: ['.pdf', '.doc', '.docx'],
 };
         var button = Dropbox.createChooseButton(options);
-        document.getElementsById("dropbox-chooser").appendChild(button);
+        document.getElementById("dropbox-chooser").appendChild(button);
       </script>
     </div>
 
